--- a/PasswordManagerWindow/Pages/Home.xaml
+++ b/PasswordManagerWindow/Pages/Home.xaml
@@ -5,6 +5,8 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
       xmlns:local="clr-namespace:PasswordManagerWindow.Pages"
       xmlns:res="clr-namespace:PasswordManagerWindow.Properties"
+      xmlns:col="clr-namespace:System.Collections;assembly=mscorlib"
+      xmlns:sys="clr-namespace:System;assembly=mscorlib"
       mc:Ignorable="d" 
       Width="1550.4"
       Height="700"
@@ -22,8 +24,8 @@
         <TranslateTransform x:Name="PageAxis"/>
     </Page.RenderTransform>
     <Page.Triggers>
-        
-            <!--<EventTrigger RoutedEvent="Page.Loaded">
+
+        <!--<EventTrigger RoutedEvent="Page.Loaded">
                 <BeginStoryboard>
                     <Storyboard>
                         <DoubleAnimation Storyboard.TargetName="PageAxis" Storyboard.TargetProperty="Y" From="100" To="0" Duration="0:0:0.2"/>
@@ -31,7 +33,7 @@
                     </Storyboard>
                 </BeginStoryboard>
             </EventTrigger>-->
-        
+
     </Page.Triggers>
     <Grid>
         <Grid.ColumnDefinitions>
@@ -49,20 +51,58 @@
 
             <RowDefinition/>
         </Grid.RowDefinitions>
-        
-        <TextBlock Text="Home" Style="{StaticResource PageHeader}" />
+
+        <TextBlock Text="{x:Static res:Resources.HomeHeader}" Style="{StaticResource PageHeader}" />
         <!--<Grid Grid.Row="2" Grid.ColumnSpan="3" Background="AntiqueWhite"/>-->
         <TextBox x:Name="SearchTextBox" Text="{Binding DataFilter, UpdateSourceTrigger=PropertyChanged}" Grid.Row="2" Grid.Column="2" Height="30" Width="300" HorizontalAlignment="Right" Margin="0,0,100,0" Style="{StaticResource SearchTextBox}"/>
         <Button x:Name="AddPasswordButton" Grid.Row="2" Grid.Column="0" Width="40" Height="40" Style="{StaticResource AddButtonStyle}" Content="&#xE710;" HorizontalAlignment="Left" Margin="100,0,0,0" Click="AddPasswordButton_Click"/>
 
-        
 
-        <DataGrid Grid.Row="4" Grid.Column="0" Grid.ColumnSpan="3" Margin="100,0,100,0" CanUserResizeColumns="False" SelectionUnit="Cell" ItemsSource="{Binding AuthenticationDataCollectionView}"  CanUserSortColumns="False" AutoGenerateColumns="False" RowHeaderWidth="0" CanUserResizeRows="False" IsReadOnly="True" CanUserReorderColumns="False" GridLinesVisibility="None" >
 
+        <DataGrid Grid.Row="4" x:Name="MainDataGrid" Style="{StaticResource DataGridStyle}" RowHeight="30"  ColumnHeaderStyle="{StaticResource DataGridColumnHeaderStyle}"  RowStyle="{DynamicResource DataGridRowStyle}" Grid.Column="0" Grid.ColumnSpan="3" Margin="100,0,100,10" ItemsSource="{Binding AuthenticationDataCollectionView}">
+            
             <DataGrid.Columns>
-                <DataGridTextColumn Header="Resource" Width="338" Binding="{Binding Path= Resource}"/>
-                <DataGridTextColumn Header="Login" Width="338" Binding="{Binding Path= Login}"/>
-                <DataGridTextColumn Header="Password" Width="338" Binding="{Binding Path= Password}"/>
+                <DataGridTextColumn Header="{x:Static res:Resources.DataGridResource}" Width="400" Binding="{Binding Path= Resource}" SortDirection="Ascending">
+                    <DataGridTextColumn.CellStyle>
+                        <Style TargetType="DataGridCell" BasedOn="{StaticResource DataGridCellStyle}">
+                            <EventSetter Event="PreviewMouseDown" Handler="CopyCellText">
+                               
+                            </EventSetter>
+                        </Style>
+                    </DataGridTextColumn.CellStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="{x:Static res:Resources.DataGridLogin}" Width="400" Binding="{Binding Path= Login}">
+                    <DataGridTextColumn.CellStyle>
+                        <Style TargetType="DataGridCell" BasedOn="{StaticResource DataGridCellStyle}">
+                            <EventSetter Event="PreviewMouseDown" Handler="CopyCellText"/>
+                        </Style>
+                    </DataGridTextColumn.CellStyle>
+                </DataGridTextColumn>
+                <DataGridTextColumn Header="{x:Static res:Resources.DataGridPassword}" Width="400" Binding="{Binding Path= Password}" >
+                    <DataGridTextColumn.CellStyle>
+                        <Style TargetType="DataGridCell" BasedOn="{StaticResource DataGridCellStyle}">
+                            <EventSetter Event="PreviewMouseDown" Handler="CopyCellText"/>
+                        </Style>
+                    </DataGridTextColumn.CellStyle>
+                </DataGridTextColumn>
+                <DataGridTemplateColumn Width="*" CellStyle="{StaticResource NotSelectableColumnStyle}">
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                            <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
+                                <Button x:Name="PopupMenuButton" Content="&#xE712;" Click="PopupMenuButton_Click" Style="{StaticResource PopupMenuButtonStyle}" Height="20" Width="20" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                                <Popup x:Name="PopupMenu"  PlacementTarget="{Binding ElementName=PopupMenuButton}" Style="{StaticResource PopupMenuStyle}" >
+                                    <Border  x:Name="DropDownBorder" Style="{StaticResource PopupMenuDropDownBorderStyle}">
+                                        <StackPanel  Background="Transparent">
+                                            <Button Content="{x:Static res:Resources.PopupMenuEdit}" Height="30"  Width = "135"  Style="{StaticResource PopupMenuItemStyle}" x:Name="EditButton" Click="EditButton_Click"/>
+                                            <Button Content="{x:Static res:Resources.PopupMenuRemove}" Height="30"  Width = "135"  Style="{StaticResource PopupMenuItemStyle}" x:Name="RemoveButton" Click="RemoveButton_Click"/>
+                                        </StackPanel>
+                                    </Border>
+                                </Popup>
+                            </StackPanel>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+
             </DataGrid.Columns>
         </DataGrid>
         <Grid  x:Name="ShadowEffectHomePage" Height="700"   Grid.Row="0" Grid.Column="0" Grid.ColumnSpan="5" Grid.RowSpan="5" Style="{StaticResource Shadow}"  />
@@ -99,8 +139,10 @@
                 <RowDefinition Height="50"/>
                 <RowDefinition Height="120"/>
             </Grid.RowDefinitions>
-
-            <TextBlock Text="{x:Static res:Resources.AddFormHeader}" 
+            <TextBox Name="IdTextBox" Visibility="Collapsed"/>
+            <TextBlock
+                x:Name="FormHeader"
+                Text="" 
                    Grid.Row="1" 
                    Grid.Column="1"
                    HorizontalAlignment="Left" 
@@ -237,7 +279,7 @@
             <Border.RenderTransform>
                 <TranslateTransform x:Name="NotificationTranslateTransform"/>
             </Border.RenderTransform>
-           
+
             <TextBlock Grid.Column="1" Grid.Row="4"   Style="{StaticResource NotificationTextStyle}" x:Name="NotificationText">
             </TextBlock>
         </Border>
