--- a/PasswordManagerWindow/Pages/Home.xaml
+++ b/PasswordManagerWindow/Pages/Home.xaml
@@ -62,10 +62,10 @@
         <DataGrid Grid.Row="4" x:Name="MainDataGrid" Style="{StaticResource DataGridStyle}" RowHeight="30"  ColumnHeaderStyle="{StaticResource DataGridColumnHeaderStyle}"  RowStyle="{DynamicResource DataGridRowStyle}" Grid.Column="0" Grid.ColumnSpan="3" Margin="100,0,100,10" ItemsSource="{Binding AuthenticationDataCollectionView}">
             
             <DataGrid.Columns>
-                <DataGridTextColumn Header="{x:Static res:Resources.DataGridResource}" Width="400" Binding="{Binding Path= Resource}" SortDirection="Ascending">
+                <DataGridTextColumn Header="{x:Static res:Resources.DataGridResource}" Width="400" Binding="{Binding Path= Resource}">
                     <DataGridTextColumn.CellStyle>
                         <Style TargetType="DataGridCell" BasedOn="{StaticResource DataGridCellStyle}">
-                            <EventSetter Event="PreviewMouseDown" Handler="CopyCellText">
+                            <EventSetter Event="PreviewMouseDoubleClick" Handler="CopyCellText">
                                
                             </EventSetter>
                         </Style>
@@ -74,22 +74,44 @@
                 <DataGridTextColumn Header="{x:Static res:Resources.DataGridLogin}" Width="400" Binding="{Binding Path= Login}">
                     <DataGridTextColumn.CellStyle>
                         <Style TargetType="DataGridCell" BasedOn="{StaticResource DataGridCellStyle}">
-                            <EventSetter Event="PreviewMouseDown" Handler="CopyCellText"/>
+                            <EventSetter Event="PreviewMouseDoubleClick" Handler="CopyCellText"/>
                         </Style>
                     </DataGridTextColumn.CellStyle>
                 </DataGridTextColumn>
-                <DataGridTextColumn Header="{x:Static res:Resources.DataGridPassword}" Width="400" Binding="{Binding Path= Password}" >
+                <!--<DataGridTextColumn Header="{x:Static res:Resources.DataGridPassword}" Width="400" Binding="{Binding Path= Password}" >
                     <DataGridTextColumn.CellStyle>
                         <Style TargetType="DataGridCell" BasedOn="{StaticResource DataGridCellStyle}">
                             <EventSetter Event="PreviewMouseDown" Handler="CopyCellText"/>
                         </Style>
                     </DataGridTextColumn.CellStyle>
-                </DataGridTextColumn>
+                </DataGridTextColumn>-->
+                <DataGridTemplateColumn Header="{x:Static res:Resources.DataGridPassword}" Width="400">
+                    <DataGridTemplateColumn.CellStyle>
+                        <Style TargetType="DataGridCell" BasedOn="{StaticResource DataGridCellStyle}">
+                            <EventSetter Event="PreviewMouseDoubleClick" Handler="CopyCellText"/>
+                        </Style>
+                      
+                    </DataGridTemplateColumn.CellStyle>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate>
+                           
+                            <Grid>
+                                <TextBlock Text="●●●●●●●" x:Name="HiddenPasswordTextBlock"/>
+                                <TextBlock Text="{Binding Path=Password}" x:Name="RevealedPasswordTextBlock" Visibility="Collapsed"/>
+                                <ToggleButton x:Name="RevealPassword" Checked="RevealPassword_Checked" Height="20" Width="20" VerticalAlignment="Center" HorizontalAlignment="Right"/>
+
+                            </Grid>
+
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
                 <DataGridTemplateColumn Width="*" CellStyle="{StaticResource NotSelectableColumnStyle}">
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate>
                             <StackPanel Orientation="Vertical" HorizontalAlignment="Center" VerticalAlignment="Center">
-                                <Button x:Name="PopupMenuButton" Content="&#xE712;" Click="PopupMenuButton_Click" Style="{StaticResource PopupMenuButtonStyle}" Height="20" Width="20" VerticalAlignment="Center" HorizontalAlignment="Center"/>
+                                
+                                    <Button x:Name="PopupMenuButton" Content="&#xE712;" Click="PopupMenuButton_Click" Style="{StaticResource PopupMenuButtonStyle}" Height="20" Width="20" VerticalAlignment="Center" HorizontalAlignment="Left"/>
+                               
                                 <Popup x:Name="PopupMenu"  PlacementTarget="{Binding ElementName=PopupMenuButton}" Style="{StaticResource PopupMenuStyle}" >
                                     <Border  x:Name="DropDownBorder" Style="{StaticResource PopupMenuDropDownBorderStyle}">
                                         <StackPanel  Background="Transparent">
