--- a/PasswordManagerMainWindow/AuthenticationWindow/Pages/PasswordReset.xaml
+++ b/PasswordManagerMainWindow/AuthenticationWindow/Pages/PasswordReset.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="PasswordManager.Auth.PasswordReset"
+﻿<Page x:Class="PasswordManager.AuthenticationWindow.Pages.PasswordReset"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:PasswordManager.Auth"
+      xmlns:local="clr-namespace:PasswordManager.AuthenticationWindow"
       xmlns:res="clr-namespace:PasswordManager.Properties"
       mc:Ignorable="d" 
       Background="{DynamicResource MainColor}"
