--- a/PasswordManagerMainWindow/AuthenticationWindow/Pages/Signup.xaml
+++ b/PasswordManagerMainWindow/AuthenticationWindow/Pages/Signup.xaml
@@ -1,9 +1,9 @@
-﻿<Page x:Class="PasswordManager.Auth.Signup"
+﻿<Page x:Class="PasswordManager.AuthenticationWindow.Pages.Signup"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:PasswordManager.Auth" xmlns:components="clr-namespace:PasswordManager.Components"
+      xmlns:local="clr-namespace:PasswordManager.AuthenticationWindow" xmlns:components="clr-namespace:PasswordManager.Components"
            xmlns:res="clr-namespace:PasswordManager.Properties"
       mc:Ignorable="d" 
       d:DesignHeight="520"
