--- a/PasswordManagerMainWindow/MainWindow/Pages/Home.xaml
+++ b/PasswordManagerMainWindow/MainWindow/Pages/Home.xaml
@@ -3,7 +3,7 @@
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-      xmlns:local="clr-namespace:PasswordManagerWindow.Pages"
+      xmlns:local="clr-namespace:PasswordManager.MainWindow.Pages"
       xmlns:res="clr-namespace:PasswordManager.Properties"
       mc:Ignorable="d" 
       Width="1550.4"
