Binding fixes at lofin and signup page

--- a/PasswordManagerMainWindow/AuthenticationWindow/Pages/PasswordReset.xaml
+++ b/PasswordManagerMainWindow/AuthenticationWindow/Pages/PasswordReset.xaml
@@ -101,7 +101,7 @@
                    FontFamily="Global Sans Serif" 
                    FontWeight="Bold"/>
 
-        <TextBox x:Name="NewPasswordTextBox" 
+        <TextBox x:Name="NewHiddenPasswordTextBox" 
                  Grid.Row="12" 
                  Grid.Column="1" 
                  BorderThickness="2" 
